@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: env.test,v 1.17.2.3 2005/10/05 08:03:18 hobbs Exp $
+# RCS: @(#) $Id$
 
 package require tcltest 2
 namespace import -force ::tcltest::*
@@ -75,7 +75,7 @@ set printenvScript [makeFile {
 	lrem names ComSpec
 	lrem names ""
     }	
-    foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH PURE_PROG_NAME DISPLAY SHLIB_PATH DYLD_LIBRARY_PATH DYLD_FRAMEWORK_PATH __CF_USER_TEXT_ENCODING } {
+    foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH PURE_PROG_NAME DISPLAY SHLIB_PATH DYLD_LIBRARY_PATH DYLD_FRAMEWORK_PATH __CF_USER_TEXT_ENCODING SYSTEMDRIVE SYSTEMROOT} {
 	lrem names $name
     }
     foreach p $names {
@@ -98,14 +98,14 @@ proc getenv {} {
 # Save the current environment variables at the start of the test.
 
 foreach name [array names env] {
-    set env2($name) $env($name)
+    set env2([string toupper $name]) $env($name)
     unset env($name)
 }
 
 # Added the following lines so that child tcltest can actually find its
 # library if the initial tcltest is run from a non-standard place.
 # ('saved' env vars)
-foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH DISPLAY SHLIB_PATH DYLD_LIBRARY_PATH DYLD_FRAMEWORK_PATH} {
+foreach name {TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH DISPLAY SHLIB_PATH DYLD_LIBRARY_PATH DYLD_FRAMEWORK_PATH SYSTEMDRIVE SYSTEMROOT} {
   if {[info exists env2($name)]} {
      set env($name) $env2($name);
   }
